# razer-naga-keymapper-ocaml

./: .gitignore  .ocamlformat  LICENSE.md  README.md  dune  execution.ml  input.ml  input_stub.c  keyMap.ml  keyMap.mli  mapping_01.txt  myLib.ml  operator.ml  parser.ml  parser.mli  razer_naga_keymapper.ml  x11.ml  x11_stub.c
src/: dune  execution.ml  execution.mli  input.ml  input_stub.c  ioctl.ml  ioctl_stub.c  keyMap.ml  keyMap.mli  myLib.ml  operator.ml  parser.ml  parser.mli  parser_intf.ml  processReaper.ml  processReaper.mli  razer_naga_keymapper.ml
test/: dune  keyMap_Test.ml  myLib_Test.ml  parser_Test.ml  testTypes.ml  unit.ml
