(executable
 (name razer_naga_keymapper)
 (modules
  myLib
  x11
  input
  operator
  parser
  keyMap
  processReaper
  execution
  ioctl
  razer_naga_keymapper)
 (libraries gen unix uutf)
 (foreign_stubs
  (language c)
  (names ioctl_stub input_stub x11_stub))
 (preprocess
  (pps ppx_deriving.show))
 (modes native byte_complete)
 (flags
  (:standard -principal -rectypes -cclib -lX11 -cclib -lXtst))
 (promote (until-clean)))

(env
 (release
  (flags
   (-cc
    cc
    -ccopt
    -s
    -ccopt
    -ffunction-sections
    -ccopt
    -fdata-sections
    -ccopt
    -Wl,--gc-sections))
  (ocamlc_flags ())
  (ocamlopt_flags
   (-O3 -unbox-closures -unbox-closures-factor 20 -rounds 6 -compact))))
