(executable
 (name razer_naga_keymapper)
 (modules razer_naga_keymapper)
 (libraries unix libs)
 (modes native byte_complete)
 (flags
  (:standard -cc cc -rectypes))
 (promote (until-clean)))

(library
 (name libs)
 (wrapped false)
 (modules
  myLib
  x11
  input
  operator
  parser
  keyMap
  processReaper
  execution
  ioctl)
 (libraries gen unix uutf)
 (foreign_stubs
  (language c)
  (names ioctl_stub input_stub x11_stub))
 (flags
  (:standard -cclib -lX11 -cclib -lXtst))
 (preprocess
  (pps ppx_deriving.show)))

(env
 (release
  (flags
   (-principal
    -cc
    "cc -shared"
    -ccopt
    -s
    -ccopt
    -ffunction-sections
    -ccopt
    -fdata-sections
    -ccopt
    -Wl,--gc-sections))
  (ocamlc_flags ())
  (ocamlopt_flags
   (-O3 -unbox-closures -unbox-closures-factor 20 -rounds 6 -compact))))
